Fix issue hero and alignmennt

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,4 +11,9 @@ footer .footer {
 
 footer .footer p {
   margin: 0;
+  margin-top:10px;
+}
+.footer.block a {
+  color: #62707c !important;
+  padding-right: 10px;
 }
