--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -19,7 +19,7 @@ header nav {
   gap: 0 2em;
  
   max-width: 1264px;
-  height: var(--nav-height);
+  /*height: var(--nav-height);*/
   padding: 0 1rem;
   font-family: var(--body-font-family);
 
